added html to index

--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-<h1>Chubby Checkers</h1>
-<div id="Board">
-</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>HTML 5 Boilerplate</title>
+    <link rel="stylesheet" href="checkers.css">
+</head>
+
+<body>
+    <script src="checkers.js"></script>
+    <h1>Chubby Checkers</h1>
+    <div id="Board">
+    </div>
+
+</body>
+
+</html>
