--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>Chubby Checkers</title>
     <link rel="stylesheet" href="checkers.css">
 </head>
 
 <body>
-    <script src="checkers.js"></script>
-    <h1>Chubby Checkers</h1>
-    <div id="Board">
+    <h1 id="Title">Chubby Checkers</h1>
+    <div class="container">
+        <div id="Board" class="game-board">
+            <div class="game-base"></div>
+        </div>
     </div>
 
 </body>
+<script type="text/javascript" src="checkers.js"></script>
 
 </html>
